# zero-to-production

./: Cargo.toml  Makefile  configuration.yaml
migrations/: 20231015152128_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  helpers.rs  subscribe.rs
