[package]
name = "zero-to-production"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.6.16"
axum-test-helper = "0.2.0"
email_address = "0.2.4"
reqwest = "0.11.16"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.0", features = ["full"] }
