[package]
name = "zero-to-production"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.6.16", features = ["tracing"] }
axum-test-helper = "0.3.0"
chrono = { version = "0.4.31", default-features = false, features = ['clock'] }
config = "0.13.3"
email_address = "0.2.4"
rand = "0.8.5"
reqwest = "0.11.16"
serde = "1.0.162"
serde_json = "1.0.96"
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ['v4'] }
